# ultrafxr

./: .bazelrc  .clang-format  .gitignore  LICENSE.txt  README.md  WORKSPACE  package.json  ultrafxr.code-workspace
assets/: convert.sh  notes.txt
c/: copts.bzl
c/compiler/: .gitignore  BUILD.bazel  Makefile  argparse.c  argparse.h  array.c  array.h  error.h  error_gen.c  error_test.c  hash.c  hash.h  message.h  message_code.h  message_test.c  message_write.c  number.h  number_dectofloat.c  number_test.c  sexpr.h  sexpr_token.c  sexpr_token_test.c  source.h  source_text.c  source_text_test.c  strbuf.c  strbuf.h  strbuf_test.c  symbol.c  symbol.h  symbol_test.c  testutil.c  testutil.h
c/config/: BUILD.bazel  config.h  copts.bzl
c/convert/: BUILD.bazel  convert.h  to_lef32.c  to_les16.c  to_les24.c  to_u8.c
c/demo/: BUILD.bazel  README.md  demo.c
c/io/: BUILD.bazel  error.c  error.h  file.c  file.h  wave.c  wave.h
c/math/: BUILD.bazel  README.md  exp2_gen.c  exp2_test.c  math.h
c/ops/: .gitignore  BUILD.bazel  README.md  bench.py  check.c  exp2_gen.c  exp2_test.c  impl.h  op_test.c  oprun.c  ops.h  osc.c  quantize.c  sin1_2.c  sin1_gen.c  tri.c
c/util/: BUILD.bazel  defs.h  die.c  flag.c  flag.h  quote.c  stdio.c  stdlib.c  util.c  util.h
csharp/: .gitignore  LICENSE.txt  README.md  UltraFXR.sln
csharp/Moria.UltraFXR/: BfxrGenerator.cs  BfxrParameters.cs  BfxrPresets.cs  BfxrWave.cs  ContinuousParamAttribute.cs  EnumParamAttribute.cs  IGenerator.cs  Moria.UltraFXR.csproj  ParamAttribute.cs
csharp/Moria.UltraFXR/Properties/: AssemblyInfo.cs
csharp/UltraFXR/: Program.cs  UltraFXR.csproj  WaveWriter.cs
csharp/UltraFXR/Properties/: AssemblyInfo.cs
doc/: Operators.md  Programs.md
examples/: 01_pulse.lisp  02_filter.lisp  03_noise.lisp
examples/intern-apocalypse/: README.md  bass.lisp  clang.lisp  click.lisp  harp.lisp  interact.lisp  monster_attack.lisp  monster_death.lisp  monster_hit.lisp  sweep.lisp  swoosh.lisp  synth.lisp
javascript/: .gitignore  README.md  cli.ts  package.json  rollup.config.js  tsconfig.json
javascript/src/: envelope.ts  index.ts  operators.ts  program.ts  random.ts  synthesizer.ts  tsconfig.json  types.ts  wave.ts
math/coeffs/: BUILD.bazel  README.md  calc.py  exp2.csv  functions.md  sin1_l1.csv  sin1_smooth.csv  sin4.csv
rust/: Cargo.toml
rust/src/: cmd_sfx.rs  color.rs  consolelogger.rs  error.rs  evaluate.rs  graph.rs  main.rs  note.rs  number.rs  parseargs.rs  parser.rs  quote_table.rs  rand.rs  sexpr.rs  shell.rs  signal.rs  sourcepos.rs  sourceprint.rs  sourcetext.rs  test.rs  token.rs  units.rs  utf8.rs  wave.rs
rust/src/evaluate/: builtins.rs  envelope.rs  environment.rs
rust/src/signal/: envelope.rs  filter.rs  graph.rs  ops.rs  program.rs
support/: BUILD.bazel
web/: .gitignore  README.md  package.json  rollup.config.js
web/public/: index.html  manifest.json
web/src/: App.svelte  App.tsx  audio.js  audio.ts
