config_setting(
    name = "darwin",
    values = {"cpu": "darwin"},
)

config_setting(
    name = "macos",
    constraint_values = ["@bazel_tools//platforms:osx"],
)

config_setting(
    name = "ios",
    constraint_values = ["@bazel_tools//platforms:ios"],
)

config_setting(
    name = "linux",
    constraint_values = ["@bazel_tools//platforms:linux"],
)
