load("//c:copts.bzl", "COPTS")

cc_library(
    name = "compiler",
    srcs = [
        "sexpr.h",
        "sexpr_token.c",
    ],
    copts = COPTS,
)

cc_library(
    name = "testutil",
    srcs = [
        "testutil.c",
    ],
    hdrs = [
        "testutil.h",
    ],
    copts = COPTS,
)

cc_test(
    name = "sexpr_token_test",
    size = "small",
    srcs = [
        "sexpr.h",
        "sexpr_token_test.c",
    ],
    copts = COPTS,
    deps = [
        ":compiler",
        ":testutil",
    ],
)

cc_binary(
    name = "error_gen",
    srcs = ["error_gen.c"],
    copts = COPTS,
)

genrule(
    name = "error",
    srcs = ["error.h"],
    outs = [
        "error_name.c",
        "error_text.c",
    ],
    cmd = "./$(location :error_gen) $(location error.h) " +
          "$(location error_name.c) $(location error_text.c)",
    tools = [":error_gen"],
)

cc_test(
    name = "error_test",
    size = "small",
    srcs = [
        "error.h",
        "error_test.c",
        ":error",
    ],
    copts = COPTS,
)
