load("//c:copts.bzl", "COPTS")

cc_library(
    name = "compiler",
    srcs = [
        "hash.c",
        "sexpr_token.c",
        "source_text.c",
        ":error_src",
    ],
    hdrs = [
        "error.h",
        "hash.h",
        "sexpr.h",
        "source.h",
    ],
    copts = COPTS,
)

cc_library(
    name = "testutil",
    srcs = [
        "testutil.c",
    ],
    hdrs = [
        "testutil.h",
    ],
    copts = COPTS,
)

cc_test(
    name = "sexpr_token_test",
    size = "small",
    srcs = [
        "sexpr_token_test.c",
    ],
    copts = COPTS,
    deps = [
        ":compiler",
        ":testutil",
    ],
)

cc_test(
    name = "source_text_test",
    size = "small",
    srcs = [
        "source_text_test.c",
    ],
    copts = COPTS,
    deps = [
        ":compiler",
        ":testutil",
    ],
)

cc_binary(
    name = "error_gen",
    srcs = ["error_gen.c"],
    copts = COPTS,
)

genrule(
    name = "error_src",
    srcs = ["error.h"],
    outs = [
        "error_name.c",
        "error_text.c",
    ],
    cmd = "./$(location :error_gen) $(location error.h) " +
          "$(location error_name.c) $(location error_text.c)",
    tools = [":error_gen"],
)

cc_test(
    name = "error_test",
    size = "small",
    srcs = [
        "error.h",
        "error_test.c",
        ":error_src",
    ],
    copts = COPTS,
    deps = [
        ":testutil",
    ],
)
