load("@rules_cc//cc:defs.bzl", "cc_library")
load("//c/config:copts.bzl", "CORE_COPTS")

cc_library(
    name = "convert",
    srcs = [
        "to_lef32.c",
        "to_les16.c",
        "to_les24.c",
        "to_u8.c",
    ],
    hdrs = [
        "convert.h",
    ],
    copts = CORE_COPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//c/config",
    ],
)
