load("@rules_cc//cc:defs.bzl", "cc_library")
load("//c:copts.bzl", "COPTS")

cc_library(
    name = "io",
    srcs = [
        "error.c",
        "wave.c",
    ],
    hdrs = [
        "error.h",
        "wave.h",
    ],
    copts = COPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//c/convert",
        "//c/util:defs",
    ],
)
