load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("//c:copts.bzl", "COPTS")

cc_library(
    name = "ops",
    srcs = [
        "sin1_2.c",
        "tri.c",
        ":exp2_srcs",
        ":sin1_srcs",
    ],
    hdrs = [
        "ops.h",
    ],
    copts = COPTS,
)

cc_binary(
    name = "exp2_gen",
    srcs = [
        "exp2_gen.c",
    ],
    copts = COPTS,
    deps = [
        "//c/util",
    ],
)

cc_binary(
    name = "sin1_gen",
    srcs = [
        "sin1_gen.c",
    ],
    copts = COPTS,
    deps = [
        "//c/util",
    ],
)

genrule(
    name = "exp2_srcs",
    srcs = [
        "//math/coeffs:exp2.csv",
    ],
    outs = [
        "exp2_2.c",
        "exp2_3.c",
        "exp2_4.c",
        "exp2_5.c",
        "exp2_6.c",
    ],
    cmd = ("./$(location :exp2_gen) 6" +
           " $(location //math/coeffs:exp2.csv)" +
           " $(RULEDIR)"),
    tools = [":exp2_gen"],
)

genrule(
    name = "sin1_srcs",
    srcs = [
        "//math/coeffs:sin4.csv",
    ],
    outs = [
        "sin1_3.c",
        "sin1_4.c",
        "sin1_5.c",
        "sin1_6.c",
    ],
    cmd = ("./$(location :sin1_gen) 6" +
           " $(location //math/coeffs:sin4.csv)" +
           " $(RULEDIR)"),
    tools = [":sin1_gen"],
)

cc_test(
    name = "op_test",
    size = "small",
    srcs = [
        "op_test.c",
    ],
    copts = COPTS,
    deps = [
        ":ops",
        "//c/util",
        "//c/util:flag",
    ],
)

cc_binary(
    name = "oprun",
    srcs = [
        "oprun.c",
    ],
    copts = COPTS,
    deps = [
        ":ops",
        "//c/util",
        "//c/util:flag",
    ],
)
